// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Fullscreen should call default props onClick function when no onClick property is passed 1`] = `
<span
  className="sc-AxiKw gMUReu"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="sc-AxjAm jWlVxK lni lni-full-screen"
  />
</span>
`;

exports[`Fullscreen should have 'as' prop 1`] = `
<div
  className="sc-AxhCb fzWNi sc-AxiKw gMUReu"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="sc-AxjAm jWlVxK lni lni-full-screen"
  />
</div>
`;

exports[`Fullscreen should have onClick listener 1`] = `
<span
  className="sc-AxiKw gMUReu"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="sc-AxjAm jWlVxK lni lni-full-screen"
  />
</span>
`;

exports[`Fullscreen should render 1`] = `
<span
  className="sc-AxiKw gMUReu"
  onClick={[Function]}
  onKeyPress={[Function]}
  role="button"
  tabIndex={0}
>
  <span
    className="sc-AxjAm jWlVxK lni lni-full-screen"
  />
</span>
`;
